# wedap

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  h5_pdist_array_input_test.py  index.html  notebook  pyproject.toml  requirements.txt  setup.cfg  setup.py  versioneer.py  wedap.html
.github/: CONTRIBUTING.md
.github/workflows/: build.yml  draft-pdf.yml  tests.yml
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat  mdap_modules.rst  modules.rst  quickstart.rst  wedap.rst  wekap.rst  west_organization.md
docs/autosummary/: mdap.MD_Plot.rst  wedap.H5_Pdist.rst  wedap.H5_Plot.rst  wekap.Kinetics.rst
docs/notebook/: default.mplstyle  input_data_2.npy  input_data_2.pkl  mpl_fonts.py  wedap_demo.ipynb  (+1 more)
examples/: h5_plot_gif.py  h5_plot_movie.py  km_clustering.py  notebook  plot.py
mdap/: __init__.py  __main__.py  command_line.py  md_pdist.py  md_plot.py
paper_figures/: 3d.mplstyle  cbar.mplstyle  paper_figures.ipynb  test.py  west.cfg
we-dap/: __init__.py  command_line.py  h5_plot_main.py  h5_plot_trace.py  search_aux.py  we-dap.py
we_dap/: __init__.py  h5_plot_multi.py  h5_plot_single.py  search_aux.py  west_h5_plotting.py
wedap/: __init__.py  __main__.py  _version.py  command_line.py  h5_cluster.py  h5_cluster2.py  h5_gif.py  h5_multi.py  h5_pdist.py  h5_plot.py  h5_plot_gif.py  h5_plot_movie.py  h5_plot_single.py  h5_plot_trace.py  h5py_testing.py  joint_plot.py  search_aux.py  we_dap.py  wedap.py  west_h5_plotting.py
wekap/: __init__.py  __main__.py  command_line.py  kinetics.py
(+230 files in other folders)
